# sofi-dashboard

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
app/: app.py  municipal_data_2024.json  remuneration_2024.json  styles.css
data_prep/: check_pdf_type.py  extract_remuneration_2024.py  extract_remuneration_pages.py  manual_remuneration_2024.csv  page_indices_2024.py  prep.py  remuneration_2024.json
docs/: app.json
