[project]
name = "sofi-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "plotly>=6.7.0",
    "plotnine>=0.15.5",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pypdf>=6.12.2",
    "reportlab>=4.5.1",
    "shinylive>=0.8.6",
    "shinywidgets>=0.7.2",
]
